Fixed code does not responive on iphone x

--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ ul i {
  }
  
 
- @media (max-width: 768px) {
+ @media screen and (max-width: 1060px) {
     header
     {
         display:none;
